@startuml
class A {
}
class B {
}
class C {
}
class D {
}
class D3 {
}
class D3_B {
}
class NamedElt {
}
enum StyleKind {
  Style1
  Style2
}
abstract class abcd_A {
  + aBooleanAttr : str
  + anIntegerAttr : int
}
class abcd_B {
  + propOfB : str
}
class abcd_C {
  + propOfC : str
}
class abcd_C1 {
  + propOfC1 : str
}
class abcd_C2 {
  + propOfC2 : str
}
abstract class abcd_D {
  + propOfD : str
}
class abcd_D1 {
  + commonOfD : str
}
class abcd_D2 {
  + commonOfD : str
}
class abcd_D3 {
  + commonOfD : str
}
class abcd_D3_B {
}
class abcd_D3_B_C {
}
class abcd_Model {
  + style : str
}
abstract class abcd_NamedElt {
  + name : str
}
class abcd_Other {
}
A <|-- abcd_B
A <|-- abcd_C
A <|-- abcd_D
B <|-- abcd_D3_B
C <|-- abcd_C1
C <|-- abcd_C2
C <|-- abcd_D3_B_C
D3 <|-- abcd_D3_B
D3_B <|-- abcd_D3_B_C
D <|-- abcd_D1
D <|-- abcd_D2
D <|-- abcd_D3
NamedElt <|-- abcd_A
NamedElt <|-- abcd_Model
NamedElt <|-- abcd_Other
abcd_A "0..9999" --* "1..1" abcd_A : children13
abcd_A "0..9999" --* "1..1" abcd_Model : elements0
abcd_A "0..1" --* "1..1" abcd_Model : optionalA3
abcd_B "0..1" --* "1..1" abcd_Model : optionalB6
abcd_C "0..1" --* "1..1" abcd_Model : optionalC8
abcd_D "0..1" --* "1..1" abcd_Model : optionalD10
abcd_Model "1..1" *-- "0..9999" abcd_Other : others1
@enduml